[package]
name = "nvrs"
version = "0.1.6-pre1"
authors = ["Adam Perkowski <adas1per@protonmail.com>"]
license = "MIT"
description = "🚦 fast new version checker for software releases 🦀"
repository = "https://github.com/adamperkowski/nvrs"
readme = "README.md"
categories = ["command-line-interface", "command-line-utilities"]
edition = "2021"
include = [
    "**/*.rs",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "rustfmt.toml",
    "man/nvrs.1"
]

[features]
nvrs_cli = ["clap", "colored", "futures"]
nvrs_tui = ["ratatui", "crossterm", "anyhow", "tachyonfx", "futures"]
default = ["aur", "github", "gitlab"]
aur = []
github = []
gitlab = []

[[bin]]
name = "nvrs"
path = "src/main.rs"
required-features = ["nvrs_cli"]

[[bin]]
name = "nvrs_tui"
path = "src/tui.rs"
required-features = ["nvrs_tui"]

[dependencies]
anyhow = { version = "1.0.94", optional = true }
clap = { version = "4.5.22", features = ["derive", "color", "error-context", "help", "std", "usage"], default-features = false , optional = true }
colored = { version = "2.1.0", optional = true }
crossterm = { version = "0.28.1", features = ["events", "event-stream"], default-features = false, optional = true }
futures = { version = "0.3.31", optional = true }
ratatui = { version =  "0.29.0", optional = true }
reqwest = { version = "0.12.9", features = ["__tls", "charset", "default-tls", "h2", "http2", "json"], default-features = false }
serde = { version = "1.0.215", features = ["derive"], default-features = false }
serde_json = "1.0.132"
tachyonfx = { version = "0.9.3", optional = true }
thiserror = "2.0.4"
tokio = { version = "1.42.0", features = ["full"] }
toml = { version = "0.8.19", features = ["parse", "display"], default-features = false }

[dev-dependencies]
tokio-test = "0.4.4"
criterion = { version = "0.5.1", features = ["html_reports"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[profile.bench]
opt-level = 3
debug = false

[[bench]]
name = "nvrs_bench"
harness = false
