[package]
name = "nvrs"
version = "0.1.7"
authors = ["Adam Perkowski <adas1per@protonmail.com>"]
license = "MIT"
description = "🚦 fast new version checker for software releases 🦀"
repository = "https://github.com/adamperkowski/nvrs"
readme = "README.md"
categories = ["command-line-interface", "command-line-utilities"]
edition = "2021"
include = [
    "**/*.rs",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "rustfmt.toml",
    "man/nvrs.1"
]

[features]
nvrs_cli = ["clap", "colored", "futures"]
default = ["aur", "crates-io", "gitea", "github", "gitlab", "regex"]
aur = []
crates-io = []
gitea = []
github = []
gitlab = []
regex = ["dep:regex"]

[[bin]]
name = "nvrs"
path = "src/cli/main.rs"
required-features = ["nvrs_cli"]

[[bin]]
name = "nvrs_tui"
path = "src/tui/main.rs"
required-features = ["nvrs_tui"]

[dependencies]
clap = { version = "4.5.29", features = ["derive", "color", "error-context", "help", "std", "usage"], default-features = false , optional = true }
colored = { version = "3.0.0", optional = true }
futures = { version = "0.3.31", optional = true }
regex = { version = "1.11.1", optional = true }
reqwest = { version = "0.12.12", features = ["__tls", "charset", "default-tls", "h2", "http2", "json"], default-features = false }
serde = { version = "1.0.217", features = ["derive"], default-features = false }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.44.0", features = ["full"] }
toml = { version = "0.8.20", features = ["parse", "display"], default-features = false }

[dev-dependencies]
tokio-test = "0.4.4"
criterion = { version = "0.5.1", features = ["html_reports"] }
nvrs = { path = "." }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[profile.bench]
opt-level = 3
debug = false

[[bench]]
name = "nvrs_bench"
harness = false
